paperless-ngx/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.mtaha.dev`)
      priority: 10
      services:
        - kind: Service
          name: paperless-ngx-web
          namespace: paperless-ngx-k8s
          passHostHeader: true
          port: 8000
          scheme: http
  tls:
    domains:
      - main: paperless.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
